# sia-proto

./: .gitignore  Cargo.toml  README.md  TODO.md  build-appimage.sh  install.sh  sia.db  sia.db-shm  sia.db-wal  uninstall.sh  update.sh
agent/: Cargo.toml
agent/src/: analyzer.rs  collectors.rs  ipc.rs  llm.rs  main.rs  storage.rs
cli/: Cargo.toml
cli-ts/: ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json
cli-ts/src/: index.tsx  ipc.ts  output.ts
cli/src/: main.rs
common/: Cargo.toml  Cargo.toml.bak
common/src/: config.rs  ipc.rs  lib.rs  types.rs
config/: default.toml
docs/: APPIMAGE_TESTING.md  CHANGELOG.md  INSTALLATION.md  INSTALL_NOTES.md  MVP_PLAN.md  MVP_SUMMARY.md  QUICKSTART.md  THRESHOLDS.md  TODO.md  TROUBLESHOOTING.md  WINDOWS_SETUP.md
sql/: schema.sql
tests/: Dockerfile.test-appimage  docker-compose.test-appimage.yml  test-appimage.sh
