[package]
name = "sia-agent"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.28"
zstd = "0.11"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4" }
toml = "0.9.8"
log = "0.4.28"
env_logger = "0.11.8"
chrono = { version = "0.4.42", features = ["serde"] }


[features]
default = []
