[package]
name = "sia-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
inquire = "0.7"
colored = "2.1"
crossterm = "0.28"

common = { path = "../common" }
chrono = "0.4.42"
